# LangChain-RAG-Agent-Practice

./: .windsurfrules  pyproject.toml
agent/: 1-agent_weather.py
ai/: 1-提示词.py  10-chain.py  2-文本匹配.py  3-langchainAlibaba.py  4-langchainChat.py  5-文本嵌入模型.py  6-prompt通用.py  7-fewshortPrompt.py  8-format&invoke.py  9-chatPrompt.py
pytorch/: 01_tensor_basics.py  02_autograd_basics.py  03_nn_module_basics.py  04_dataloader_basics.py  05_comprehensive_example.py
